# researchcrew

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  agent.py  pyproject.toml  runner.py
.beads/: config.json
.beads/epics/: EPIC-1-foundation.md  EPIC-2-multi-agent.md
.beads/issues/: RC-1.md  RC-10.md  RC-11.md  RC-12.md  RC-13.md  RC-14.md  RC-15.md  RC-16.md  RC-17.md  RC-18.md  RC-19.md  RC-2.md  RC-20.md  RC-3.md  RC-4.md  RC-5.md  RC-6.md  RC-7.md  RC-8.md  RC-9.md
.github/workflows/: ci.yml
agents/: __init__.py  fact_checker.py  orchestrator.py  researcher.py  synthesizer.py  writer.py
config/: dev.yaml  permissions.yaml  prod.yaml  staging.yaml
deploy/: config.yaml  deploy.sh
docs/: LEARNING_PROJECT.md  api.md  architecture.md  debugging-runbook.md  deployment.md  integrations.md  mcp-servers.md
docs/development/: contributing.md  setup.md  testing.md
docs/infrastructure/: observability.md
docs/user-guide/: best-practices.md  getting-started.md  index.md  installation.md  troubleshooting.md
docs/user-guide/tutorials/: comparison-research.md  comprehensive-report.md  fact-checking.md  technical-research.md
docs/user-guide/usage/: basic-queries.md  conversations.md  knowledge-base.md  reports.md
evals/: EVALUATION_CRITERIA.md  __init__.py  baseline_report.json  golden_dataset.jsonl  metrics.py  run_evals.py
integrations/: __init__.py  base.py  langgraph_adapter.py
mcp-servers/: README.md
mcp-servers/knowledge-base-server/: mcp.json  server.py
mcp-servers/shared/: __init__.py  utils.py
mcp-servers/web-research-server/: mcp.json  server.py
prompts/v1/: researcher.md  synthesizer.md
schemas/: __init__.py  workflow_state.py
tests/: __init__.py  conftest.py  test_agents.py  test_architecture_verification.py  test_circuit_breaker.py  test_context_manager.py  test_debugging.py  test_deployment_verification.py  test_evals.py  test_fallback.py  test_knowledge_base.py  test_metrics.py  test_operations_verification.py  test_quality_verification.py  test_resilience.py  test_runner.py  test_session_manager.py  test_tools.py  test_tracing.py  test_workflows.py
tools/: __init__.py  knowledge.py  search.py
utils/: __init__.py  circuit_breaker.py  context_manager.py  debugging.py  fallback.py  handoffs.py  knowledge_base.py  logging_config.py  metrics.py  resilience.py  session_manager.py  tracing.py
